--- a/style.css
+++ b/style.css
@@ -76,16 +76,18 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   gap: 10px;
-  
   margin-top: 100px;
   margin-bottom: 100px;
 }
 
-
+.movie-item div {
+  max-width: 100px;
+  word-wrap: break-word;
+}
 
 .movie-item img {
-  height: 150px;
-  width: 200px;
+  height: 210px;
+  width: 150px;
   border-radius: 5px;
 }
 
@@ -170,7 +172,8 @@ h1 {
   }
 
   .movie-item img {
-    height: 100px;
+    height: 160px;
+    width: 100px;
   }
 
   .modal-content {
